force-app/main/default/objects/Transaction__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Negative amount means a debit on the financial institution&#39;s books, and a positive amount means a credit on the financial institution&#39;s books</description>
    <inlineHelpText>Negative amount means a debit on the financial institution&#39;s books, and a positive amount means a credit on the financial institution&#39;s books</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>