force-app/main/default/objects/Transaction__c/fields/AmountAllFinancialEntries__c.field-meta.xml
<CustomField>
    <fullName>AmountAllFinancialEntries__c</fullName>
    <label>Value Financial Entries in Transaction</label>
    <summarizedField>FinancialEntry__c.Amount__c</summarizedField>
    <summaryForeignKey>FinancialEntry__c.Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>