force-app/main/default/objects/Transaction__c/fields/TransactedDate__c.field-meta.xml
<CustomField>
    <fullName>TransactedDate__c</fullName>
    <label>Transacted Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>